# projectile_motion_simulator

./: README.md  pyproject.toml
.github/: pull_request_template.md
