[tool.poetry]
name = "projectile-motion-simulator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
ipython = "^8.31.0"
tox = "^4.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
